@startuml
' Settings
' ============================

' use +,#,- instead of icons
'skinparam classAttributeIconSize 0

' horizontal distance in px
skinparam nodesep 60 

' vertical distance in px
skinparam ranksep 50

' use only straight lines (ortho/polyline)
skinparam linetype ortho

' title
title 3-2-1 Smart Light Factory



' Abstract Classes
' ============================
interface Light{
    +update(msg: LightConfig)
}

interface Observer{
    +update(msg)
}

class Device{
    #name: String
}

Interface LightFactory{
    #_lm: LightManager 
    +createLight(name: String)
    #createConcreteLight(name: String)
}

' Concrete Classes
' ============================
class LightManager{
    -_lights: Dict<String, Light> 
    +getLight(name: String)
    +addLight(l: Light)
    +delTrigger(name: String)
}

class SwitchLight{
    -_state: Bool
    +update(msg: LightConfig)
    +switchOn()
    +switchOff()
}

class DimmLight{
    -_brightness: Percent
    +update(msg: LightConfig)
    +setBrightness(lvl: Percent)
}

class SwitchLightFactory{
    #createConcreteLight(name: String)
}

class DimmLightFactory{
    #createConcreteLight(name: String)
}


' Relations
' ================================

SwitchLightFactory -u-|> LightFactory

DimmLightFactory -u-|> SwitchLightFactory
LightFactory "1" -r-> "1" LightManager
LightManager "1" -r-> "*" Light
Light -u-|> Observer
Light -u-|> Device
SwitchLight -u-|> Light
DimmLight -u-|> SwitchLight


@enduml